tests/ui/type-alias-impl-trait/issue-60564.stderr
error[E0792]: expected generic type parameter, found `u8`
  --> $DIR/issue-60564.rs:20:34
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                         - this generic parameter must be used with a generic type parameter
...
LL |     fn iter_bits(self, n: u8) -> Self::BitsIter {
   |                                  ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
